// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> Heading H1 should match snapshot 1`] = `
<StyledHeading
  className=""
  italic={false}
  level="1"
  transform="none"
  weight="semi"
>
  Hello World!
</StyledHeading>
`;

exports[`<Text /> Heading H2 should match snapshot 1`] = `
<StyledHeading
  className=""
  italic={false}
  level="2"
  transform="none"
  weight="semi"
>
  Hello World!
</StyledHeading>
`;

exports[`<Text /> Heading H3 should match snapshot 1`] = `
<StyledHeading
  className=""
  italic={false}
  level="3"
  transform="none"
  weight="semi"
>
  Hello World!
</StyledHeading>
`;

exports[`<Text /> Inline should match snapshot 1`] = `
<StyledInline
  className=""
  italic={false}
  size="medium"
  transform="none"
  weight="regular"
>
  Hello World!
</StyledInline>
`;

exports[`<Text /> Paragraph should match snapshot 1`] = `
<StyledParagraph
  className=""
  italic={false}
  size="medium"
  transform="none"
  weight="regular"
>
  Hello World!
</StyledParagraph>
`;
